tests/bad_programs/type_errors/ass_double_or_bool_to_double.nc
int main() {
    double d = 2.0 || true;
    return 0;
}
